2015-11-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Use _AC_OUTPUT_SUBDIRS macro inside a subshell.

2015-11-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Use _AC_OUTPUT_SUBDIRS macro to configure in 
	subdirectory.

2015-11-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Handle srcdir being an absolute path for 
	building in XSParagraph subdirectory.  Used code from Autoconf's 
	_AC_SRCDIRS macro (release 2.69).

2015-11-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Add hints about the interdependencies between 
	subdirectories.

2015-11-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Pass on all the options we were passed when 
	calling configure in the XSParagraph subdirectory.  Don't use 
	AC_CONFIG_SUBDIRS for this subdirectory, to save configuring
	it twice.  When testing if we can build and load Perl extension 
	modules, pass -I flags to Perl to put directories containing 
	files at start of module search path.  Account for out-of-source 
	builds by using srcdir variable.

2015-11-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/TestXS.pm: Remove mentions of 
	"XSParagraph" in comments and messages.  Comment out line for 
	debugging output.

2015-11-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Use srcdir as well as builddir to set module 
	search path.
	* man/Makefile.am (MAKEINFO_ENVIRONMENT): Set value of 
	top_builddir correctly.
	(mi_env): Use MAKEINFO_ENVIRONMENT, as it wasn't used otherwise.

2015-11-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Add 'use Texinfo::Convert::Converter' as this 
	module may not be loaded.

2015-11-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
	* tp/Texinfo/Convert/XSParagraph/TestXS.xs: Add "PROTOTYPES: ENABLE"
	line to get rid of a warning.

2015-11-08  Gavin Smith  <gavinsmith0123@gmail.com>
